Added profile pic and intro headings

--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@
     <title>Taylor Heaton - Front-end Developer</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm writing in POPPINS!</p>
-    <i class="fas fa-meteor"></i>
+    <div class="row">
+      <div class="col-4 text-center">
+        <h2 class="header-intro">Hi, I'm</h2>
+        <h1>Taylor Heaton</h1>
+        <h3>Front-end Developer based in Fort Worth, TX</h3>
+      </div>
+      <img
+        src="images/edited-profile-pic.jpg"
+        class="img-fluid header-image d-block rounded col-8"
+      />
+    </div>
   </body>
 </html>
