added .hero div and background color

--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
     <title>Taylor Heaton - Front-end Developer</title>
   </head>
   <body>
-    <div class="row">
-      <div class="col-4 text-center">
-        <h2 class="header-intro">Hi, I'm</h2>
-        <h1>Taylor Heaton</h1>
-        <h3>Front-end Developer based in Fort Worth, TX</h3>
+    <div class="hero">
+      <div class="row">
+        <div class="col-4 text-center">
+          <h2 class="header-intro">Hi, I'm</h2>
+          <h1>Taylor Heaton</h1>
+          <h3>Front-end Developer based in Fort Worth, TX</h3>
+        </div>
+
+        <img
+          src="images/edited-profile-pic.jpg"
+          class="img-fluid header-image d-block rounded col-8"
+        />
       </div>
-      <img
-        src="images/edited-profile-pic.jpg"
-        class="img-fluid header-image d-block rounded col-8"
-      />
     </div>
   </body>
 </html>
