--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
   </head>
   <body>
     <div class="hero">
-      <div class="row">
-        <div class="col-4 text-center">
-          <h2 class="header-intro">Hi, I'm</h2>
+      <div class="row header-main">
+        <div class="col-5 text-center header-intro">
+          <h2>Hi, I'm</h2>
           <h1>Taylor Heaton</h1>
-          <h3>Front-end Developer based in Fort Worth, TX</h3>
+          <h3>Front-end Developer - Fort Worth, TX</h3>
         </div>
-
-        <img
-          src="images/edited-profile-pic.jpg"
-          class="img-fluid header-image d-block rounded col-8"
-        />
+        <div class="col-7">
+          <img
+            src="images/edited-profile-pic.jpg"
+            class="img-fluid header-image d-block"
+          />
+        </div>
       </div>
     </div>
   </body>
