Updated font sizes in hero

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="hero">
       <div class="row header-main">
         <div class="col-5 text-center header-intro">
-          <h2>Hi, I'm</h2>
+          <p>Hi, I'm</p>
           <h1>Taylor Heaton</h1>
-          <h3>Front-end Developer - Fort Worth, TX</h3>
+          <h3>Front-end Developer in Fort Worth, TX</h3>
         </div>
         <div class="col-7">
           <img
