Added contact me button

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
           <p>Hi, I'm</p>
           <h1>Taylor Heaton</h1>
           <h3>Front-end Developer in Fort Worth, TX</h3>
+          <a href="#" target="_blank" class="contact-button btn btn-branding"
+            >Contact Me</a
+          >
         </div>
         <div class="col-7">
           <img
