--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-custom navbar-light">
-      <a class="navbar-brand" href="#">Taylor Heaton</a>
+      <a class="navbar-brand" href="#">TH</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -85,10 +85,12 @@
         <div class="col-5 text-center header-intro">
           <p>Hi, I'm</p>
           <h1>Taylor Heaton</h1>
-          <h3>Front-end Developer in Fort Worth, TX</h3>
-          <a href="#" target="_blank" class="contact-button btn btn-branding"
-            >Contact Me</a
-          >
+          <h3 class="mb-5">Front-end Developer in Fort Worth, TX</h3>
+          <div>
+            <a href="#" target="_blank" class="contact-button btn btn-branding"
+              >Contact Me</a
+            >
+          </div>
         </div>
         <div class="col-7">
           <img
