--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Special Project</a>
+            <a
+              class="nav-link"
+              href="https://youtube.com/momonthespectrum"
+              target="_blank"
+              >Passion Project</a
+            >
           </li>
         </ul>
       </div>
@@ -85,18 +90,44 @@
         <div class="col-5 text-center header-intro">
           <p>Hi, I'm</p>
           <h1>Taylor Heaton</h1>
-          <h3 class="mb-5">Front-end Developer in Fort Worth, TX</h3>
+          <h3 class="mb-5">Software Developer in Fort Worth, TX</h3>
           <div>
             <a href="#" target="_blank" class="contact-button btn btn-branding"
               >Contact Me</a
             >
           </div>
         </div>
+
         <div class="col-7">
           <img
             src="images/edited-profile-pic.jpg"
             class="img-fluid header-image d-block"
           />
+        </div>
+      </div>
+    </div>
+    <h1 class="text-center mt-5 showcase-title">My Projects</h1>
+    <div class="container">
+      <div class="row mt-5 mb-2">
+        <div class="col-4 d-flex project-img">
+          <img src="images/autism.png" class="img-fluid" />
+        </div>
+        <div class="col-4 d-flex project-img">
+          <img src="images/weather-app.png" class="img-fluid" />
+        </div>
+        <div class="col-4 d-flex project-img">
+          <img src="images/dictionary-app.png" class="img-fluid" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-4 d-flex justify-content-center">
+          <h3 class="project-showcase">Autism Website</h3>
+        </div>
+        <div class="col-4 d-flex justify-content-center">
+          <h3 class="project-showcase">Weather App</h3>
+        </div>
+        <div class="col-4 d-flex justify-content-center">
+          <h3 class="project-showcase">Dictionary App</h3>
         </div>
       </div>
     </div>
