Added gutters between img grid

--- a/index.html
+++ b/index.html
@@ -108,15 +108,30 @@
     </div>
     <h1 class="text-center mt-5 showcase-title">My Projects</h1>
     <div class="container">
-      <div class="row mt-5 mb-2">
-        <div class="col-4 d-flex project-img">
-          <img src="images/autism.png" class="img-fluid" />
+      <div class="row mt-5 mb-1">
+        <div class="col-4">
+          <div class="project-image">
+            <img
+              src="images/autism.png"
+              class="img-fluid p-3 border rounded img-display"
+            />
+          </div>
         </div>
-        <div class="col-4 d-flex project-img">
-          <img src="images/weather-app.png" class="img-fluid" />
+        <div class="col-4">
+          <div class="project-image">
+            <img
+              src="images/weather-app.png"
+              class="img-fluid p-3 border rounded img-display"
+            />
+          </div>
         </div>
-        <div class="col-4 d-flex project-img">
-          <img src="images/dictionary-app.png" class="img-fluid" />
+        <div class="col-4">
+          <div class="project-image">
+            <img
+              src="images/dictionary-app.png"
+              class="img-fluid p-3 border rounded img-display"
+            />
+          </div>
         </div>
       </div>
       <div class="row mb-5">
