Added skill icons

--- a/index.html
+++ b/index.html
@@ -135,16 +135,56 @@
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-4 d-flex justify-content-center">
-          <h3 class="project-showcase">Autism Website</h3>
+        <div class="col-4">
+          <h3 class="project-showcase text-center mb-4">Autism Website</h3>
+          <div class="icons text-center">
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-js-square"></i>
+            <i class="fas fa-laptop-code"></i>
+          </div>
         </div>
-        <div class="col-4 d-flex justify-content-center">
-          <h3 class="project-showcase">Weather App</h3>
+        <div class="col-4">
+          <h3 class="project-showcase text-center mb-4">Weather App</h3>
+          <div class="icons text-center">
+            <i class="fab fa-html5 html"></i>
+            <i class="fab fa-css3-alt css"></i>
+            <i class="fab fa-js-square js"></i>
+            <i class="fas fa-laptop-code code"></i>
+            <i class="fas fa-cogs api"></i>
+            <i class="fab fa-github github"></i>
+            <i class="fab fa-bootstrap bootstrap"></i>
+            <i class="fas fa-th flexbox"></i>
+            <i class="fab fa-react react"></i>
+            <i class="fas fa-network-wired hosting"></i>
+            <i class="fas fa-search seo"></i>
+          </div>
         </div>
-        <div class="col-4 d-flex justify-content-center">
-          <h3 class="project-showcase">Dictionary App</h3>
+        <div class="col-4">
+          <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
+          <div class="icons text-center">
+            <i class="fab fa-html5 html"></i>
+            <i class="fab fa-css3-alt css"></i>
+            <i class="fab fa-js-square js"></i>
+            <i class="fas fa-laptop-code code"></i>
+            <i class="fas fa-cogs api"></i>
+            <i class="fab fa-github github"></i>
+            <i class="fab fa-bootstrap bootstrap"></i>
+            <i class="fas fa-th flexbox"></i>
+            <i class="fab fa-react react"></i>
+            <i class="fas fa-network-wired hosting"></i>
+            <i class="fas fa-search seo"></i>
+          </div>
         </div>
       </div>
     </div>
+    <div class="container contact-section">
+      <h3 class="text-center contact-title"><a href="#" class="contact-btn">Contact Me</h3></a>
+    </div>
+
+    <footer class="text-center mb-5 mt-5">
+      Responsive website built and designed by Taylor Heaton, open-sourced on
+      Github and hosted on Netlify.
+    </footer>
   </body>
 </html>
