Added contact me button

--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
         </div>
       </div>
     </div>
-    <div class="container contact-section">
-      <h3 class="text-center contact-title"><a href="#" class="contact-btn">Contact Me</h3></a>
+    <div class="container contact-section text-center">
+      <a href="#" target="_blank" class="contact-button btn btn-branding mt-5"
+        >Contact Me</a
+      >
     </div>
 
     <footer class="text-center mb-5 mt-5">
