Added color to icons

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Autism Website</h3>
           <div class="icons text-center">
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
-            <i class="fab fa-js-square"></i>
-            <i class="fas fa-laptop-code"></i>
+            <i class="fab fa-html5 html"></i>
+            <i class="fab fa-css3-alt css"></i>
+            <i class="fab fa-js-square js"></i>
+            <i class="fas fa-laptop-code code"></i>
           </div>
         </div>
         <div class="col-4">
