Added titles under icons in grid nest

--- a/index.html
+++ b/index.html
@@ -134,50 +134,142 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container icon-showcase">
       <div class="row mb-5">
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-          <div class="icons text-center">
-            <i class="fab fa-html5 html"></i>
-            <i class="fab fa-css3-alt css"></i>
-            <i class="fab fa-js-square js"></i>
-            <i class="fas fa-laptop-code code"></i>
+          <div class="icons">
+            <div class="row text-center">
+              <div class="col-3">
+                <i class="fab fa-html5 html"></i>
+                <small class="icon-text">HTML</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-css3-alt css"></i>
+                <small class="icon-text">CSS</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-js-square js"></i>
+                <small class="icon-text">JS</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-laptop-code code"></i>
+                <small class="icon-text">VS Code</small>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Weather App</h3>
-          <div class="icons text-center">
-            <i class="fab fa-html5 html"></i>
-            <i class="fab fa-css3-alt css"></i>
-            <i class="fab fa-js-square js"></i>
-            <i class="fas fa-laptop-code code"></i>
-            <i class="fas fa-cogs api"></i>
-            <i class="fab fa-github github"></i>
-            <i class="fab fa-bootstrap bootstrap"></i>
-            <i class="fas fa-th flexbox"></i>
-            <i class="fab fa-react react"></i>
-            <i class="fas fa-network-wired hosting"></i>
-            <i class="fas fa-search seo"></i>
+          <div class="icons">
+            <div class="row text-center">
+              <div class="col-3">
+                <i class="fab fa-html5 html"></i>
+                <small class="icon-text">HTML</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-css3-alt css"></i>
+                <small class="icon-text">CSS</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-js-square js"></i>
+                <small class="icon-text">JS</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-laptop-code code"></i>
+                <small class="icon-text">VS Code</small>
+              </div>
+            </div>
+            <div class="row text-center">
+              <div class="col-3">
+                <i class="fas fa-cogs api"></i>
+                <small class="icon-text">API</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-github github"></i>
+                <small class="icon-text">Github</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-bootstrap bootstrap"></i>
+                <small class="icon-text">Bootstrap</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-th flexbox"></i>
+                <small class="icon-text">Flexbox</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-react react"></i>
+                <small class="icon-text">React</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-network-wired hosting"></i>
+                <small class="icon-text">Hosting</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-search seo"></i>
+                <small class="icon-text">SEO</small>
+              </div>
+            </div>
           </div>
         </div>
+
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-          <div class="icons text-center">
-            <i class="fab fa-html5 html"></i>
-            <i class="fab fa-css3-alt css"></i>
-            <i class="fab fa-js-square js"></i>
-            <i class="fas fa-laptop-code code"></i>
-            <i class="fas fa-cogs api"></i>
-            <i class="fab fa-github github"></i>
-            <i class="fab fa-bootstrap bootstrap"></i>
-            <i class="fas fa-th flexbox"></i>
-            <i class="fab fa-react react"></i>
-            <i class="fas fa-network-wired hosting"></i>
-            <i class="fas fa-search seo"></i>
+          <div class="icons">
+            <div class="row text-center">
+              <div class="col-3">
+                <i class="fab fa-html5 html"></i>
+                <small class="icon-text">HTML</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-css3-alt css"></i>
+                <small class="icon-text">CSS</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-js-square js"></i>
+                <small class="icon-text">JS</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-laptop-code code"></i>
+                <small class="icon-text">VS Code</small>
+              </div>
+            </div>
+            <div class="row text-center">
+              <div class="col-3">
+                <i class="fas fa-cogs api"></i>
+                <small class="icon-text">API</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-github github"></i>
+                <small class="icon-text">Github</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-bootstrap bootstrap"></i>
+                <small class="icon-text">Bootstrap</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-th flexbox"></i>
+                <small class="icon-text">Flexbox</small>
+              </div>
+              <div class="col-3">
+                <i class="fab fa-react react"></i>
+                <small class="icon-text">React</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-network-wired hosting"></i>
+                <small class="icon-text">Hosting</small>
+              </div>
+              <div class="col-3">
+                <i class="fas fa-search seo"></i>
+                <small class="icon-text">SEO</small>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="container contact-section text-center">
       <a href="#" target="_blank" class="contact-button btn btn-branding mt-5"
         >Contact Me</a
