--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Weather App</h3>
           <div class="icons">
-            <div class="row text-center">
+            <div class="row text-center mb-2">
               <div class="col-3">
                 <i class="fab fa-html5 html"></i>
                 <small class="icon-text">HTML</small>
@@ -198,6 +198,8 @@
                 <i class="fas fa-th flexbox"></i>
                 <small class="icon-text">Flexbox</small>
               </div>
+            </div>
+            <div class="row mt-2 text-center">
               <div class="col-3">
                 <i class="fab fa-react react"></i>
                 <small class="icon-text">React</small>
@@ -217,7 +219,7 @@
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
           <div class="icons">
-            <div class="row text-center">
+            <div class="row text-center mb-2">
               <div class="col-3">
                 <i class="fab fa-html5 html"></i>
                 <small class="icon-text">HTML</small>
@@ -252,6 +254,8 @@
                 <i class="fas fa-th flexbox"></i>
                 <small class="icon-text">Flexbox</small>
               </div>
+            </div>
+            <div class="row mt-2 text-center">
               <div class="col-3">
                 <i class="fab fa-react react"></i>
                 <small class="icon-text">React</small>
