Added border and border padding on icon boxes

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
       <div class="row mb-5">
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-          <div class="icons">
-            <div class="row text-center">
+          <div class="icons border p-1">
+            <div class="row text-center p-2">
               <div class="col-3">
                 <i class="fab fa-html5 html"></i>
                 <small class="icon-text">HTML</small>
@@ -162,8 +162,8 @@
         </div>
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Weather App</h3>
-          <div class="icons">
-            <div class="row text-center mb-2">
+          <div class="icons border p-1">
+            <div class="row text-center mb-2 p-2">
               <div class="col-3">
                 <i class="fab fa-html5 html"></i>
                 <small class="icon-text">HTML</small>
@@ -181,7 +181,7 @@
                 <small class="icon-text">VS Code</small>
               </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center p-2">
               <div class="col-3">
                 <i class="fas fa-cogs api"></i>
                 <small class="icon-text">API</small>
@@ -199,7 +199,7 @@
                 <small class="icon-text">Flexbox</small>
               </div>
             </div>
-            <div class="row mt-2 text-center">
+            <div class="row mt-2 text-center p-2">
               <div class="col-3">
                 <i class="fab fa-react react"></i>
                 <small class="icon-text">React</small>
@@ -218,8 +218,8 @@
 
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-          <div class="icons">
-            <div class="row text-center mb-2">
+          <div class="icons border p-1">
+            <div class="row text-center mb-2 p-2">
               <div class="col-3">
                 <i class="fab fa-html5 html"></i>
                 <small class="icon-text">HTML</small>
@@ -237,7 +237,7 @@
                 <small class="icon-text">VS Code</small>
               </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center p-2">
               <div class="col-3">
                 <i class="fas fa-cogs api"></i>
                 <small class="icon-text">API</small>
@@ -255,7 +255,7 @@
                 <small class="icon-text">Flexbox</small>
               </div>
             </div>
-            <div class="row mt-2 text-center">
+            <div class="row mt-2 text-center p-2">
               <div class="col-3">
                 <i class="fab fa-react react"></i>
                 <small class="icon-text">React</small>
