--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
       </div>
     </nav>
-    <div class="hero">
+    <div class="hero shadow-sm">
       <div class="row header-main">
         <div class="col-5 text-center header-intro">
           <p>Hi, I'm</p>
@@ -274,10 +274,18 @@
       </div>
     </div>
 
-    <div class="container contact-section text-center">
-      <a href="#" target="_blank" class="contact-button btn btn-branding mt-5"
-        >Contact Me</a
-      >
+    <div class="container contact-section text-center shadow-sm">
+      <h3>Contact Me</h3>
+      <div class="container contact-icons mt-4">
+        <a
+          href="mailto:taylornheaton@gmail.com"
+          title="Email Taylor"
+          class="email-link"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-github"></i>
+      </div>
     </div>
 
     <footer class="text-center mb-5 mt-5">
