Added links to contact links

--- a/index.html
+++ b/index.html
@@ -276,21 +276,36 @@
 
     <div class="container contact-section text-center shadow-sm">
       <h3>Contact Me</h3>
-      <div class="container contact-icons mt-4">
+      <div class="container mt-4">
         <a
           href="mailto:taylornheaton@gmail.com"
           title="Email Taylor"
-          class="email-link"
+          class="contact-icons"
           ><i class="far fa-envelope"></i
         ></a>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-github"></i>
+        <a
+          href="https://www.linkedin.com/in/taylor-heaton-14070969/"
+          title="Taylor's Linked-In Profile"
+          target="_blank"
+          class="contact-icons"
+        >
+          <i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/theaton89"
+          title="Taylor's Github Profile"
+          target="_blank"
+          class="contact-icons"
+          ><i class="fab fa-github"></i
+        ></a>
       </div>
     </div>
 
     <footer class="text-center mb-5 mt-5">
-      Responsive website built and designed by Taylor Heaton, open-sourced on
-      Github and hosted on Netlify.
+      <small>
+        Responsive website built and designed by Taylor Heaton, open-sourced on
+        Github and hosted on Netlify.
+      </small>
     </footer>
   </body>
 </html>
