--- a/index.html
+++ b/index.html
@@ -303,8 +303,26 @@
 
     <footer class="text-center mb-5 mt-5">
       <small>
-        Responsive website built and designed by Taylor Heaton, open-sourced on
-        Github and hosted on Netlify.
+        Responsive website built and designed by
+        <a
+          href="https://www.youtube.com/momonthespectrum"
+          target="_blank"
+          title="Taylor's Youtube Channel"
+          >Taylor Heaton</a
+        >,
+        <a
+          href="https://github.com/theaton89"
+          target="_blank"
+          title="Taylor's Github Profile"
+          >open-sourced on Github</a
+        >
+        and
+        <a
+          href="https://friendly-williams-d95e74.netlify.app/"
+          target="_blank"
+          title="Taylor's Netlify Site"
+          >hosted on Netlify</a
+        >.
       </small>
     </footer>
   </body>
