Tweaked fonts and font sizes in contact footer

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </div>
 
     <div class="container contact-section text-center shadow-sm">
-      <h3>Contact Me</h3>
+      <h3 class="contact-header">Contact Me</h3>
       <div class="container mt-4">
         <a
           href="mailto:taylornheaton@gmail.com"
@@ -299,6 +299,7 @@
           ><i class="fab fa-github"></i
         ></a>
       </div>
+      <p class="taylors-email mt-4">taylornheaton@gmail.com</p>
     </div>
 
     <footer class="text-center mb-5 mt-5">
