Added bottom arrow link to jump to top

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <title>Taylor Heaton - Front-end Developer</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-custom navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-custom navbar-light" id="top">
       <a class="navbar-brand" href="#">TH</a>
       <button
         class="navbar-toggler"
@@ -139,6 +139,7 @@
       <div class="row mb-5">
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Autism Website</h3>
+          <p>This is what it's about</p>
           <div class="icons border p-1">
             <div class="row text-center p-2">
               <div class="col-3">
@@ -162,6 +163,7 @@
         </div>
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Weather App</h3>
+          <p>This is what it's about</p>
           <div class="icons border p-1">
             <div class="row text-center mb-2 p-2">
               <div class="col-3">
@@ -218,6 +220,7 @@
 
         <div class="col-4">
           <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
+          <p>This is what it's about</p>
           <div class="icons border p-1">
             <div class="row text-center mb-2 p-2">
               <div class="col-3">
@@ -302,7 +305,14 @@
       <p class="taylors-email mt-4">taylornheaton@gmail.com</p>
     </div>
 
-    <footer class="text-center mb-5 mt-5">
+    <footer class="text-center mb-5 mt-3">
+      <a href="#top" title="Back to top" class="arrow-link"
+        ><i
+          class="fas fa-arrow-circle-up mb-4 footer-arrow"
+          title="Back to Top"
+        ></i
+      ></a>
+      <br />
       <small>
         Responsive website built and designed by
         <a
