--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a
@@ -92,7 +92,10 @@
           <h1>Taylor Heaton</h1>
           <h3 class="mb-5">Software Developer in Fort Worth, TX</h3>
           <div>
-            <a href="#" target="_blank" class="contact-button btn btn-branding"
+            <a
+              href="#contact"
+              target="_blank"
+              class="contact-button btn btn-branding"
               >Contact Me</a
             >
           </div>
@@ -106,180 +109,181 @@
         </div>
       </div>
     </div>
-    <h1 class="text-center mt-5 showcase-title">My Projects</h1>
-    <div class="container">
-      <div class="row mt-5 mb-1">
-        <div class="col-4">
-          <div class="project-image">
-            <img
-              src="images/autism.png"
-              class="img-fluid p-3 border rounded img-display"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="project-image">
-            <img
-              src="images/weather-app.png"
-              class="img-fluid p-3 border rounded img-display"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="project-image">
-            <img
-              src="images/dictionary-app.png"
-              class="img-fluid p-3 border rounded img-display"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container icon-showcase">
-      <div class="row mb-5">
-        <div class="col-4">
-          <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-          <p>This is what it's about</p>
-          <div class="icons border p-1">
-            <div class="row text-center p-2">
-              <div class="col-3">
-                <i class="fab fa-html5 html"></i>
-                <small class="icon-text">HTML</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-css3-alt css"></i>
-                <small class="icon-text">CSS</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-js-square js"></i>
-                <small class="icon-text">JS</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-laptop-code code"></i>
-                <small class="icon-text">VS Code</small>
-              </div>
+    <div class="container my-projects">
+      <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
+      <div class="container">
+        <div class="row mt-5 mb-1">
+          <div class="col-4">
+            <div class="project-image">
+              <img
+                src="images/autism.png"
+                class="img-fluid p-3 border rounded img-display"
+              />
             </div>
           </div>
-        </div>
-        <div class="col-4">
-          <h3 class="project-showcase text-center mb-4">Weather App</h3>
-          <p>This is what it's about</p>
-          <div class="icons border p-1">
-            <div class="row text-center mb-2 p-2">
-              <div class="col-3">
-                <i class="fab fa-html5 html"></i>
-                <small class="icon-text">HTML</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-css3-alt css"></i>
-                <small class="icon-text">CSS</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-js-square js"></i>
-                <small class="icon-text">JS</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-laptop-code code"></i>
-                <small class="icon-text">VS Code</small>
-              </div>
-            </div>
-            <div class="row text-center p-2">
-              <div class="col-3">
-                <i class="fas fa-cogs api"></i>
-                <small class="icon-text">API</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-github github"></i>
-                <small class="icon-text">Github</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-bootstrap bootstrap"></i>
-                <small class="icon-text">Bootstrap</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-th flexbox"></i>
-                <small class="icon-text">Flexbox</small>
-              </div>
-            </div>
-            <div class="row mt-2 text-center p-2">
-              <div class="col-3">
-                <i class="fab fa-react react"></i>
-                <small class="icon-text">React</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-network-wired hosting"></i>
-                <small class="icon-text">Hosting</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-search seo"></i>
-                <small class="icon-text">SEO</small>
-              </div>
+          <div class="col-4">
+            <div class="project-image">
+              <img
+                src="images/weather-app.png"
+                class="img-fluid p-3 border rounded img-display"
+              />
             </div>
           </div>
-        </div>
-
-        <div class="col-4">
-          <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-          <p>This is what it's about</p>
-          <div class="icons border p-1">
-            <div class="row text-center mb-2 p-2">
-              <div class="col-3">
-                <i class="fab fa-html5 html"></i>
-                <small class="icon-text">HTML</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-css3-alt css"></i>
-                <small class="icon-text">CSS</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-js-square js"></i>
-                <small class="icon-text">JS</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-laptop-code code"></i>
-                <small class="icon-text">VS Code</small>
-              </div>
-            </div>
-            <div class="row text-center p-2">
-              <div class="col-3">
-                <i class="fas fa-cogs api"></i>
-                <small class="icon-text">API</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-github github"></i>
-                <small class="icon-text">Github</small>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-bootstrap bootstrap"></i>
-                <small class="icon-text">Bootstrap</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-th flexbox"></i>
-                <small class="icon-text">Flexbox</small>
-              </div>
-            </div>
-            <div class="row mt-2 text-center p-2">
-              <div class="col-3">
-                <i class="fab fa-react react"></i>
-                <small class="icon-text">React</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-network-wired hosting"></i>
-                <small class="icon-text">Hosting</small>
-              </div>
-              <div class="col-3">
-                <i class="fas fa-search seo"></i>
-                <small class="icon-text">SEO</small>
-              </div>
+          <div class="col-4">
+            <div class="project-image">
+              <img
+                src="images/dictionary-app.png"
+                class="img-fluid p-3 border rounded img-display"
+              />
             </div>
           </div>
         </div>
       </div>
-    </div>
+      <div class="container icon-showcase">
+        <div class="row mb-5">
+          <div class="col-4">
+            <h3 class="project-showcase text-center mb-4">Autism Website</h3>
+            <p>This is what it's about</p>
+            <div class="icons border p-1 mb-5">
+              <div class="row text-center p-2">
+                <div class="col-3">
+                  <i class="fab fa-html5 html"></i>
+                  <small class="icon-text">HTML</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-css3-alt css"></i>
+                  <small class="icon-text">CSS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-js-square js"></i>
+                  <small class="icon-text">JS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-laptop-code code"></i>
+                  <small class="icon-text">VS Code</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <h3 class="project-showcase text-center mb-4">Weather App</h3>
+            <p>This is what it's about</p>
+            <div class="icons border p-1 mb-5">
+              <div class="row text-center mb-2 p-2">
+                <div class="col-3">
+                  <i class="fab fa-html5 html"></i>
+                  <small class="icon-text">HTML</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-css3-alt css"></i>
+                  <small class="icon-text">CSS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-js-square js"></i>
+                  <small class="icon-text">JS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-laptop-code code"></i>
+                  <small class="icon-text">VS Code</small>
+                </div>
+              </div>
+              <div class="row text-center p-2">
+                <div class="col-3">
+                  <i class="fas fa-cogs api"></i>
+                  <small class="icon-text">API</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-github github"></i>
+                  <small class="icon-text">Github</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-bootstrap bootstrap"></i>
+                  <small class="icon-text">Bootstrap</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-th flexbox"></i>
+                  <small class="icon-text">Flexbox</small>
+                </div>
+              </div>
+              <div class="row mt-2 text-center p-2">
+                <div class="col-3">
+                  <i class="fab fa-react react"></i>
+                  <small class="icon-text">React</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-network-wired hosting"></i>
+                  <small class="icon-text">Hosting</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-search seo"></i>
+                  <small class="icon-text">SEO</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-4">
+            <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
+            <p>This is what it's about</p>
+            <div class="icons border p-1 mb-5">
+              <div class="row text-center mb-2 p-2">
+                <div class="col-3">
+                  <i class="fab fa-html5 html"></i>
+                  <small class="icon-text">HTML</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-css3-alt css"></i>
+                  <small class="icon-text">CSS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-js-square js"></i>
+                  <small class="icon-text">JS</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-laptop-code code"></i>
+                  <small class="icon-text">VS Code</small>
+                </div>
+              </div>
+              <div class="row text-center p-2">
+                <div class="col-3">
+                  <i class="fas fa-cogs api"></i>
+                  <small class="icon-text">API</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-github github"></i>
+                  <small class="icon-text">Github</small>
+                </div>
+                <div class="col-3">
+                  <i class="fab fa-bootstrap bootstrap"></i>
+                  <small class="icon-text">Bootstrap</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-th flexbox"></i>
+                  <small class="icon-text">Flexbox</small>
+                </div>
+              </div>
+              <div class="row mt-2 text-center p-2">
+                <div class="col-3">
+                  <i class="fab fa-react react"></i>
+                  <small class="icon-text">React</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-network-wired hosting"></i>
+                  <small class="icon-text">Hosting</small>
+                </div>
+                <div class="col-3">
+                  <i class="fas fa-search seo"></i>
+                  <small class="icon-text">SEO</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container contact-section text-center shadow-sm">
-      <h3 class="contact-header">Contact Me</h3>
-      <div class="container mt-4">
+      <h3 class="contact-header mb-3" id="contact">Contact Me</h3>
+      <div class="container">
         <a
           href="mailto:taylornheaton@gmail.com"
           title="Email Taylor"
@@ -305,7 +309,7 @@
       <p class="taylors-email mt-4">taylornheaton@gmail.com</p>
     </div>
 
-    <footer class="text-center mb-5 mt-3">
+    <footer class="text-center mb-5 mt-4">
       <a href="#top" title="Back to top" class="arrow-link"
         ><i
           class="fas fa-arrow-circle-up mb-4 footer-arrow"
