Added SEO and linked project imgs to corresponding sites

--- a/index.html
+++ b/index.html
@@ -60,25 +60,44 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a
+              class="nav-link"
+              href="#"
+              title="Homepage for Taylor Heaton's Portfolio"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a
+              class="nav-link"
+              href="#"
+              title="About Taylor Heaton, Software Developer"
+              >About</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a
+              class="nav-link"
+              href="#portfolio"
+              title="Project Portfolio for Taylor Heaton"
+              >Portfolio</a
+            >
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a
+              class="nav-link"
+              href="#contact"
+              title="Contact Taylor Heaton, Software Developer"
+              >Contact</a
+            >
           </li>
           <li class="nav-item">
             <a
               class="nav-link"
               href="https://youtube.com/momonthespectrum"
               target="_blank"
+              title="Mom on the Spectrum, Taylor Heaton's Passion Project"
               >Passion Project</a
             >
           </li>
@@ -96,6 +115,7 @@
               href="#contact"
               target="_blank"
               class="contact-button btn btn-branding"
+              title="Contact Taylor Heaton"
               >Contact Me</a
             >
           </div>
@@ -105,6 +125,8 @@
           <img
             src="images/edited-profile-pic.jpg"
             class="img-fluid header-image d-block"
+            alt="Taylor Heaton profile picture"
+            title="Taylor Heaton's Profile Picture"
           />
         </div>
       </div>
@@ -115,26 +137,44 @@
         <div class="row mt-5 mb-1">
           <div class="col-4">
             <div class="project-image">
-              <img
-                src="images/autism.png"
-                class="img-fluid p-3 border rounded img-display"
-              />
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
+                target="_blank"
+              >
+                <img
+                  src="images/autism.png"
+                  class="img-fluid p-3 border rounded img-display"
+                  alt="Autism in Females, Website by Taylor Heaton"
+                  title="Autism Website by Taylor Heaton"
+                />
+              </a>
             </div>
           </div>
           <div class="col-4">
             <div class="project-image">
-              <img
-                src="images/weather-app.png"
-                class="img-fluid p-3 border rounded img-display"
-              />
+              <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
+                <img
+                  src="images/weather-app.png"
+                  class="img-fluid p-3 border rounded img-display"
+                  alt="Weather application with forecast"
+                  title="Weather app by Taylor Heaton"
+                />
+              </a>
             </div>
           </div>
           <div class="col-4">
             <div class="project-image">
-              <img
-                src="images/dictionary-app.png"
-                class="img-fluid p-3 border rounded img-display"
-              />
+              <a
+                href="https://hardcore-newton-2875a1.netlify.app/"
+                target="_blank"
+              >
+                <img
+                  src="images/dictionary-app.png"
+                  class="img-fluid p-3 border rounded img-display"
+                  alt="Mental Health Dictionary application"
+                  title="Mental Health Dictionary app by Taylor Heaton"
+                />
+              </a>
             </div>
           </div>
         </div>
