Added responsive design to profile pic and hero

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     </nav>
     <div class="hero shadow-sm">
       <div class="row header-main">
-        <div class="col-5 text-center header-intro">
-          <p>Hi, I'm</p>
-          <h1>Taylor Heaton</h1>
-          <h3 class="mb-5">Software Developer in Fort Worth, TX</h3>
+        <div class="col-md-5 text-center header-intro">
+          <p class="header-paragraph">Hi, I'm</p>
+          <h1 class="header-h1">Taylor Heaton</h1>
+          <h3 class="mb-5 header-h3">Software Developer in Fort Worth, TX</h3>
           <div>
             <a
               href="#contact"
@@ -121,7 +121,7 @@
           </div>
         </div>
 
-        <div class="col-7">
+        <div class="col-md-7 profile-pic">
           <img
             src="images/edited-profile-pic.jpg"
             class="img-fluid header-image d-block"
@@ -186,19 +186,19 @@
             <p>This is what it's about</p>
             <div class="icons border p-1 mb-5">
               <div class="row text-center p-2">
-                <div class="col-3">
+                <div class="col-md-3">
                   <i class="fab fa-html5 html"></i>
                   <small class="icon-text">HTML</small>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                   <i class="fab fa-css3-alt css"></i>
                   <small class="icon-text">CSS</small>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                   <i class="fab fa-js-square js"></i>
                   <small class="icon-text">JS</small>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                   <i class="fas fa-laptop-code code"></i>
                   <small class="icon-text">VS Code</small>
                 </div>
