--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
       <div class="container">
         <div class="row mt-5 mb-1">
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="project-image">
               <a
                 href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
@@ -150,7 +150,7 @@
               </a>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="project-image">
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
@@ -162,7 +162,7 @@
               </a>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="project-image">
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
@@ -181,9 +181,9 @@
       </div>
       <div class="container icon-showcase">
         <div class="row mb-5">
-          <div class="col-4">
+          <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-            <p>This is what it's about</p>
+            <p class="text-center">This is what it's about</p>
             <div class="icons border p-1 mb-5">
               <div class="row text-center p-2">
                 <div class="col-md-3">
@@ -205,9 +205,9 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Weather App</h3>
-            <p>This is what it's about</p>
+            <p class="text-center">This is what it's about</p>
             <div class="icons border p-1 mb-5">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
@@ -262,9 +262,9 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-            <p>This is what it's about</p>
+            <p class="text-center">This is what it's about</p>
             <div class="icons border p-1 mb-5">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
