Added "Launch Project" buttons

--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Autism Website</h3>
             <p class="text-center">This is what it's about</p>
+            <div>
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
+                target="_blank"
+                class="btn btn-project"
+                title="Open Autism Website by Taylor Heaton"
+                >Launch Project</a
+              >
+            </div>
             <div class="icons border p-1 mb-5">
               <div class="row text-center p-2">
                 <div class="col-md-3">
@@ -208,6 +217,15 @@
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Weather App</h3>
             <p class="text-center">This is what it's about</p>
+            <div>
+              <a
+                href="https://jovial-bose-b591a2.netlify.app/"
+                target="_blank"
+                class="btn btn-project"
+                title="Open Weather app by Taylor Heaton"
+                >Launch Project</a
+              >
+            </div>
             <div class="icons border p-1 mb-5">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
@@ -265,6 +283,15 @@
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
             <p class="text-center">This is what it's about</p>
+            <div>
+              <a
+                href="https://hardcore-newton-2875a1.netlify.app/"
+                target="_blank"
+                class="btn btn-project"
+                title="Open Dictionary App by Taylor Heaton"
+                >Launch Project</a
+              >
+            </div>
             <div class="icons border p-1 mb-5">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
