Added Resume tab to navbar

--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
             >
           </li>
 
+          
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#contact"
-              title="Contact Taylor Heaton, Software Developer"
-              >Contact</a
+              href="#"
+              target="_blank"
+              title="Resume for Taylor Heaton"
+              >Resume</a
             >
           </li>
           <li class="nav-item">
@@ -100,6 +102,14 @@
               title="Mom on the Spectrum, Taylor Heaton's Passion Project"
               >Passion Project</a
             >
+            <li class="nav-item">
+            <a
+              class="nav-link"
+              href="#contact"
+              title="Contact Taylor Heaton, Software Developer"
+              >Contact</a
+            >
+          </li>
           </li>
         </ul>
       </div>
