--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="project-image">
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
-                  src="images/weather-app.png"
+                  src="images/weather-app.jpg"
                   class="img-fluid p-3 border rounded img-display"
                   alt="Weather application with forecast"
                   title="Weather app by Taylor Heaton"
@@ -193,7 +193,7 @@
         <div class="row mb-5">
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-            <p class="text-center">This is what it's about</p>
+            <p class="text-center project-description">This is what it's about blah blah blah</p>
             <div>
               <a
                 href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
@@ -226,7 +226,7 @@
           </div>
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Weather App</h3>
-            <p class="text-center">This is what it's about</p>
+            <p class="text-center project-description">This is what it's about</p>
             <div>
               <a
                 href="https://jovial-bose-b591a2.netlify.app/"
@@ -292,7 +292,7 @@
 
           <div class="col-md-4">
             <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-            <p class="text-center">This is what it's about</p>
+            <p class="text-center project-description">This is what it's about</p>
             <div>
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
