New autism img and updated autism website url

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
           <div class="col-md-4">
             <div class="project-image">
               <a
-                href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
+                href="https://naughty-perlman-1cb4e0.netlify.app/"
                 target="_blank"
               >
                 <img
-                  src="images/autism.png"
+                  src="images/autism-website.jpg"
                   class="img-fluid p-3 border rounded img-display"
                   alt="Autism in Females, Website by Taylor Heaton"
                   title="Autism Website by Taylor Heaton"
@@ -196,7 +196,7 @@
             <p class="text-center project-description">This is what it's about blah blah blah</p>
             <div>
               <a
-                href="https://www.shecodes.io/workshops/shecodes-online-workshop-56-0/projects/273940"
+                href="https://naughty-perlman-1cb4e0.netlify.app/"
                 target="_blank"
                 class="btn btn-project"
                 title="Open Autism Website by Taylor Heaton"
