--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio and Resume for Taylor Heaton, Front-end Developer"
+      content="Portfolio and Resume for Taylor Heaton, Software Developer"
     />
 
     <link
@@ -40,7 +40,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Taylor Heaton - Front-end Developer</title>
+    <title>Taylor Heaton - Software Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-custom navbar-light" id="top">
@@ -153,7 +153,7 @@
               >
                 <img
                   src="images/autism-website.jpg"
-                  class="img-fluid p-3 border rounded img-display"
+                  class="img-fluid p-2 border rounded img-display"
                   alt="Autism in Females, Website by Taylor Heaton"
                   title="Autism Website by Taylor Heaton"
                 />
@@ -165,7 +165,7 @@
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
                   src="images/weather-app.jpg"
-                  class="img-fluid p-3 border rounded img-display"
+                  class="img-fluid p-2 border rounded img-display"
                   alt="Weather application with forecast"
                   title="Weather app by Taylor Heaton"
                 />
@@ -179,8 +179,8 @@
                 target="_blank"
               >
                 <img
-                  src="images/dictionary-app.png"
-                  class="img-fluid p-3 border rounded img-display"
+                  src="images/dictionary-app.jpg"
+                  class="img-fluid p-2 border rounded img-display"
                   alt="Mental Health Dictionary application"
                   title="Mental Health Dictionary app by Taylor Heaton"
                 />
@@ -386,7 +386,7 @@
       <p class="taylors-email mt-4">taylornheaton@gmail.com</p>
     </div>
 
-    <footer class="text-center mb-5 mt-4">
+    <footer class="text-center mb-3 mt-4">
       <a href="#top" title="Back to top" class="arrow-link"
         ><i
           class="fas fa-arrow-circle-up mb-4 footer-arrow"
