--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="/about.html"
               title="About Taylor Heaton, Software Developer"
               >About</a
             >
