Updated responsive padding on footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
 
-        <div class="col-md-7 profile-pic">
+        <div class="col-lg-7 profile-pic">
           <img
             src="images/edited-profile-pic.jpg"
             class="img-fluid header-image d-block"
