--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-custom navbar-light" id="top">
-      <a class="navbar-brand" href="#">TH</a>
+      <a class="navbar-brand" href="/">TH</a>
       <button
         class="navbar-toggler"
         type="button"
