Added h1 and h3 on About.html

--- a/about.html
+++ b/about.html
@@ -84,7 +84,6 @@
             >
           </li>
 
-          
           <li class="nav-item">
             <a
               class="nav-link"
@@ -102,7 +101,9 @@
               title="Mom on the Spectrum, Taylor Heaton's Passion Project"
               >Passion Project</a
             >
-            <li class="nav-item">
+          </li>
+
+          <li class="nav-item">
             <a
               class="nav-link"
               href="index.html#contact"
@@ -110,7 +111,10 @@
               >Contact</a
             >
           </li>
-          </li>
         </ul>
       </div>
     </nav>
+    <h1>Hi, I'm Taylor Heaton</h1>
+    <h3>Software Developer in Fort Worth, TX</h3>
+  </body>
+</html>
