--- a/about.html
+++ b/about.html
@@ -114,7 +114,26 @@
         </ul>
       </div>
     </nav>
-    <h1>Hi, I'm Taylor Heaton</h1>
-    <h3>Software Developer in Fort Worth, TX</h3>
+    <div class="about-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h1 class="mt-5 mb-3">Hi, I'm Taylor Heaton</h1>
+            <h3 class="mb-3">Software Developer in Fort Worth, TX</h3>
+            <p>I graduated from TCU</p>
+          </div>
+          <div class="col-md-4">
+            <div class="about-image">
+              <img
+                src="images/rainbowprofile.jpg"
+                alt="Profile picture of Taylor Heaton, Software Developer"
+                title="Taylor Heaton Profile Pic"
+                class="img-fluid p-3 m-2"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
