Added grid with certification images

--- a/about.html
+++ b/about.html
@@ -118,8 +118,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h1 class="mt-5 mb-3">Hi, I'm Taylor Heaton</h1>
-            <h3 class="mb-3">Software Developer in Fort Worth, TX</h3>
+            <h1 class="mt-5 mb-2">Hi, I'm Taylor Heaton</h1>
+            <h3 class="mb-4">Software Developer in Fort Worth, TX</h3>
             <p>I graduated from TCU</p>
           </div>
           <div class="col-md-4">
@@ -131,6 +131,51 @@
                 class="img-fluid p-3 m-2"
               />
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="certifications">
+      <div class="container"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="cert-img">
+            <img
+              src="images/react-cert.jpg"
+              alt="Taylor Heaton React Development Certification"
+              title="Taylor Heaton React Development Certification"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="cert-img">
+            <img
+              src="images/responsive-cert.jpg"
+              alt="Taylor Heaton React Development Certification"
+              title="Taylor Heaton React Development Certification"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="cert-img">
+            <img
+              src="images/frontend-cert.jpg"
+              alt="Taylor Heaton React Development Certification"
+              title="Taylor Heaton React Development Certification"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="cert-img">
+            <img
+              src="images/intro-cert.jpg"
+              alt="Taylor Heaton React Development Certification"
+              title="Taylor Heaton React Development Certification"
+              class="img-fluid"
+            />
           </div>
         </div>
       </div>
