Added urls to certifications

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             <h3 class="mb-4">Software Developer in Fort Worth, TX</h3>
             <p>I graduated from TCU</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="about-image">
               <img
                 src="images/rainbowprofile.jpg"
@@ -135,47 +135,71 @@
         </div>
       </div>
     </div>
-    <div class="certifications">
+    <div class="certifications m-4">
       <div class="container"></div>
       <div class="row">
         <div class="col-md-3">
           <div class="cert-img">
-            <img
-              src="images/react-cert.jpg"
-              alt="Taylor Heaton React Development Certification"
+            <a
+              href="https://www.shecodes.io/certificates/a27e88259d6a7097ae7c724cb9b00ea2"
+              target="_blank"
               title="Taylor Heaton React Development Certification"
-              class="img-fluid"
-            />
+            >
+              <img
+                src="images/react-cert.jpg"
+                alt="Taylor Heaton React Development Certification"
+                title="Taylor Heaton React Development Certification"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="cert-img">
-            <img
-              src="images/responsive-cert.jpg"
-              alt="Taylor Heaton React Development Certification"
-              title="Taylor Heaton React Development Certification"
-              class="img-fluid"
-            />
+            <a
+              href="#"
+              target="_blank"
+              title="Taylor Heaton Responsive Development Certification"
+            >
+              <img
+                src="images/responsive-cert.jpg"
+                alt="Taylor Heaton React Development Certification"
+                title="Taylor Heaton React Development Certification"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="cert-img">
-            <img
-              src="images/frontend-cert.jpg"
-              alt="Taylor Heaton React Development Certification"
-              title="Taylor Heaton React Development Certification"
-              class="img-fluid"
-            />
+            <a
+              href="https://www.shecodes.io/certificates/e014f0c0932cbbe4f4bf380193625a74"
+              target="_blank"
+              title="Taylor Heaton Front-end Development Certification"
+            >
+              <img
+                src="images/frontend-cert.jpg"
+                alt="Taylor Heaton React Development Certification"
+                title="Taylor Heaton React Development Certification"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
         <div class="col-md-3">
           <div class="cert-img">
-            <img
-              src="images/intro-cert.jpg"
-              alt="Taylor Heaton React Development Certification"
-              title="Taylor Heaton React Development Certification"
-              class="img-fluid"
-            />
+            <a
+              href="https://www.shecodes.io/certificates/793c6994532fd0a82109bb2f61e07685"
+              target="_blank"
+              title="Taylor Heaton Coding Certification"
+            >
+              <img
+                src="images/intro-cert.jpg"
+                alt="Taylor Heaton React Development Certification"
+                title="Taylor Heaton React Development Certification"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
       </div>
