--- a/about.html
+++ b/about.html
@@ -136,6 +136,7 @@
       </div>
     </div>
     <div class="certifications m-4">
+      <h2 class="text-center mb-3">My Certifications</h2>
       <div class="container"></div>
       <div class="row">
         <div class="col-md-3">
