--- a/about.html
+++ b/about.html
@@ -59,20 +59,20 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a
               class="nav-link"
               href="/"
               title="Homepage for Taylor Heaton's Portfolio"
-              >Home <span class="sr-only">(current)</span></a
+              >Home</a
             >
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a
               class="nav-link"
               href="#"
               title="About Taylor Heaton, Software Developer"
-              >About</a
+              >About<span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
